[gd_scene load_steps=5 format=3 uid="uid://taovp5xicteg"]

[ext_resource type="PackedScene" uid="uid://7bbxdmeobxfs" path="res://source/actors/interactables/interactable.tscn" id="1_p14rr"]
[ext_resource type="Script" uid="uid://cfqotdmusjea7" path="res://source/actors/interactables/moveable.gd" id="2_tqjtj"]

[sub_resource type="Shader" id="Shader_1xkeu"]
resource_local_to_scene = true
code = "shader_type spatial;
render_mode cull_front;

uniform float outlineSize = 0.02;
uniform bool outlineOn = false;
uniform bool transparent = false;

void vertex()
{
	if (outlineOn)
		VERTEX += NORMAL * outlineSize;
}


void fragment()
{
	if (outlineOn)
		ALBEDO = vec3(1.0, 1.0, 1.0);
	if (transparent && !outlineOn)
		ALPHA = 0.0;
}


void light()
{
	if (outlineOn)
	{
		DIFFUSE_LIGHT = vec3(1.0, 1.0, 1.0);
	}
}"
metadata/_edit_res_path = "res://source/assets/shaders/outline_shader.tres"

[sub_resource type="ShaderMaterial" id="ShaderMaterial_nyo86"]
resource_local_to_scene = true
render_priority = 0
shader = SubResource("Shader_1xkeu")
shader_parameter/outlineSize = 0.02
shader_parameter/outlineOn = false
shader_parameter/transparent = false

[node name="moveable_template" instance=ExtResource("1_p14rr")]
script = ExtResource("2_tqjtj")
move_to_offset = Vector3(0, 0, 0)

[node name="mesh" parent="." index="0"]
layers = 4
material_overlay = SubResource("ShaderMaterial_nyo86")

[node name="static_body" type="StaticBody3D" parent="." index="2"]

[node name="collision_shape" type="CollisionShape3D" parent="static_body" index="0"]

[node name="move_player" type="AudioStreamPlayer3D" parent="static_body" index="1"]

[node name="moveable_collision_blocker" type="StaticBody3D" parent="." index="3"]

[node name="collision_shape" type="CollisionShape3D" parent="moveable_collision_blocker" index="0"]
disabled = true

[node name="no_interact_area" type="Area3D" parent="." index="4"]
collision_layer = 0
collision_mask = 2

[node name="collision_shape" type="CollisionShape3D" parent="no_interact_area" index="0"]

[connection signal="body_entered" from="no_interact_area" to="." method="_on_no_interact_area_body_entered"]
[connection signal="body_exited" from="no_interact_area" to="." method="_on_no_interact_area_body_exited"]
